--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
   <body>
     <header>
       <nav>
-        <!-- <div class="logo">
-          <img src="./media/Black Cream Elegant Monogram Initial Name I C Logo _20241018_074601_0000.png" alt="" height="50px" />
-        </div> -->
         <a href="#">
           <lord-icon
               src="https://cdn.lordicon.com/cnpvyndp.json"
@@ -25,24 +22,24 @@
               style="width:50px;height:50px">
           </lord-icon>
         </a>
-      <a href="#"><lord-icon
-          src="https://cdn.lordicon.com/axteoudt.json"
-          trigger="hover"
-          colors="primary:#e83a30"
-          style="width:250px;height:50px">
-        </lord-icon></a>  
-      <a href="#"><lord-icon
-        src="https://cdn.lordicon.com/zrtfxghu.json"
-        trigger="hover"
-        colors="primary:#e83a30"
-        style="width:50px;height:50px">
+      <a href="#">
+        <lord-icon
+            src="https://cdn.lordicon.com/axteoudt.json"
+            trigger="hover"
+            style="width:50px;height:50px">
         </lord-icon>
-      </a>    
       <a href="#"><lord-icon
-        src="https://cdn.lordicon.com/rsvfayfn.json"
-        trigger="hover"
-        colors="primary:#e83a30"
-        style="width:50px;height:50px">
+      src="https://cdn.lordicon.com/kddybgok.json"
+      trigger="morph"
+      style="width:50px;height:50px">
+  </lord-icon>
+      </a>    
+      <a href="#">
+        <lord-icon
+            src="https://cdn.lordicon.com/rsvfayfn.json"
+            trigger="morph"
+            state="morph-phone-ring"
+            style="width:50px;height:50px">
         </lord-icon>
       </a>   
       <a href="#"><button class="button">Hire Me</button>
@@ -85,7 +82,7 @@
     </section>
 
     <section class="projects">
-      <h2>My Client Projects</h2>
+      <!-- <h2>My Client Projects</h2> -->
       <br />
       <div class="project-list">
         <div class="project-item">
@@ -137,7 +134,7 @@
           <p>"Would highly recommend rio for graphics work!"</p>
           <span>- Fawaz</span>
         </div>
-        <div class="feedback-item">
+        <!-- <div class="feedback-item">
           <p>"Would highly recommend rio for graphics work!"</p>
           <span>- Fawaz</span>
         </div>
@@ -165,12 +162,13 @@
           <p>"Would highly recommend rio for graphics work!"</p>
           <span>- Fawaz</span>
         </div>
-      </div>
+      </div> -->
     </section>
 
     <section class="cta">
       <h2>Have An Awesome Project Idea? Let's Discuss</h2>
-      <a href="#"><button class="contact-btn">Get In Touch</button></a>
+      <a href="#"><button class="button">GET IN TOUCH</button>
+        </a>
     </section>
 
     <footer>
