--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="./media/Black Cream Elegant Monogram Initial Name I C Logo _20241018_074755_0000.png"
       type="image/x-icon"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -46,6 +47,7 @@
         </a>    
       </nav>
 
+    <div data-aos="fade-up">
       <section class="hero">
         <div class="hero-content">
           <h1>
@@ -53,6 +55,8 @@
             Front-End Developer and <br>
             Graphics Design Based in NIGERIA.
           </h1>
+        </div>
+        <div data-aos="fade-up">
           <div class="buttons">
             <a href="https://wa.me/message/NRZ6Z34G3F47D1"><button class="button">GET IN TOUCH</button> 
             </a>
@@ -60,30 +64,40 @@
             </a> 
           </div>
         </div>
+        <div data-aos="fade-up">
         <div class="hero-image">
           <img src="./media/Black Cream Elegant Monogram Initial Name I C Logo _20241018_074601_0000.png" alt="Photo"height="300px">
         </div>
+        </div>
       </section>
     </header>
-
+  <div data-aos="fade-up">
     <section class="services">
       <h2>Services I Am Providing</h2>
+      <div data-aos="fade-up">
       <div class="service-list">
         <div class="service-item">
           <h3>WEB DEVELOPMENT</h3>
         </div>
+      </div>
+      <div data-aos="fade-up">
         <div class="service-item">
           <h3>GRAPHICS DESIGN</h3>
         </div>
+      </div>
+      <div data-aos="fade-up">
         <div class="service-item">
           <h3>MS OFFICE SPECIALIST</h3>
         </div>
       </div>
+      </div>
     </section>
+  </div>
 
+  
     <section class="projects">
-      <!-- <h2>My Client Projects</h2> -->
       <br />
+    <div data-aos="fade-up">
       <div class="project-list">
         <div class="project-item">
           <img src="./media/pexels-pixabay-270632.jpg" alt="Web Design" height="250px">
@@ -91,25 +105,31 @@
           <p>20+ Projects</p>
           <a href="#"></a>
         </div>
+    </div>
+    <div data-aos="fade-up">
         <div class="project-item">
           <img src="./media/pexels-tranmautritam-326501.jpg" alt="Graphics Design" height="250px">
           <h3>GRAPHICS DESIGN</h3>
           <p>150+ Projects</p>
         </div>
+    </div>
+    <div data-aos="fade-up">  
         <div class="project-item">
           <img src="./media/msOffice.jpg" alt="Ms office specialist" height="250px">
           <h3>MICROSOFT OFFICE</h3>
           <p>100+ Projects</p>
         </div>
+    </div>    
       </div>
     </section>
 
+  <div data-aos="fade-up">
     <section class="stats">
       <div class="stat-item">
         <h3>200+</h3>
         <p>Oveerall Projects Done</p>
       </div>
-      <div class="stat-item">
+     <div class="stat-item">
         <h3>5+ Years</h3>
         <p>Experience</p>
       </div>
@@ -117,52 +137,33 @@
         <h3>99.99%</h3>
         <p>Client Satisfaction</p>
       </div>
+  </div>    
     </section>
 
+    <div data-aos="fade-up">
     <section class="feedback">
       <h2>Explore Our Clients Feedback</h2>
+    </div>
+    <div data-aos="fade-up">
       <div class="feedback-list">
         <div class="feedback-item">
           <p>"Rio did an amazing job on our website!"</p>
           <span>- Godfrey</span>
         </div>
+      </div>
+      <div data-aos="fade-up">
         <div class="feedback-item">
           <p>"Fantastic design on our presentation!."</p>
           <span>- Mr. Segun</span>
         </div>
+      </div>
+      <div data-aos="fade-up">
         <div class="feedback-item">
           <p>"Would highly recommend rio for graphics work!"</p>
           <span>- Fawaz</span>
         </div>
-        <!-- <div class="feedback-item">
-          <p>"Would highly recommend rio for graphics work!"</p>
-          <span>- Fawaz</span>
-        </div>
-        <div class="feedback-item">
-          <p>"Would highly recommend rio for graphics work!"</p>
-          <span>- Fawaz</span>
-        </div>
-        <div class="feedback-item">
-          <p>"Would highly recommend rio for graphics work!"</p>
-          <span>- Fawaz</span>
-        </div>
-        <div class="feedback-item">
-          <p>"Would highly recommend rio for graphics work!"</p>
-          <span>- Fawaz</span>
-        </div>
-        <div class="feedback-item">
-          <p>"Would highly recommend rio for graphics work!"</p>
-          <span>- Fawaz</span>
-        </div>
-        <div class="feedback-item">
-          <p>"Would highly recommend rio for graphics work!"</p>
-          <span>- Fawaz</span>
-        </div>
-        <div class="feedback-item">
-          <p>"Would highly recommend rio for graphics work!"</p>
-          <span>- Fawaz</span>
-        </div>
-      </div> -->
+      </div>
+      </div>
     </section>
 
     <section class="cta">
@@ -172,6 +173,7 @@
     </section>
 
     <footer>
+      
       <div class="footer-content">
         <p>© Rasheed Idris.O, All rights reserved.</p>
         <div class="social-links">
@@ -200,8 +202,12 @@
         </div>
       </div>
     </footer>
-    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="idrisolade7" data-description="Support me on Buy me a coffee!" data-message="" data-color="#FF813F" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+   <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="idrisolade7" data-description="Support me on Buy me a coffee!" data-message="" data-color="#FF813F" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
 
