--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>INKSDROP SERVICE | Developer & Designer Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="shortcut icon" href="./media/Black Cream Elegant Monogram Initial Name I C Logo _20241018_074755_0000.png" type="image/x-icon">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
         
