--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>INKSDROP SERVICE | Developer & Designer Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="shortcut icon" href="./media/Black Cream Elegant Monogram Initial Name I C Logo _20241018_074755_0000.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./media/Water-Drop--Streamline-Sharp-Gradient-Free.svg" type="image/x-icon">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
         
@@ -196,11 +196,11 @@
                 </p>
                 <div class="grid grid-cols-2 gap-4 pt-4">
                     <div class="p-4 glass rounded-2xl">
-                        <div class="text-2xl font-bold">5+</div>
+                        <div class="text-2xl font-bold">3+</div>
                         <div class="text-sm text-gray-500 uppercase tracking-wider">Years Experience</div>
                     </div>
                     <div class="p-4 glass rounded-2xl">
-                        <div class="text-2xl font-bold">50+</div>
+                        <div class="text-2xl font-bold">30+</div>
                         <div class="text-sm text-gray-500 uppercase tracking-wider">Projects Completed</div>
                     </div>
                 </div>
